# LearnWebGpu

./: CMakeLists.txt  LICENSE  README.md
libs/: .gitignore
libs/dawn/: .gitignore  build info.md
libs/dawn/Release/: build info.md
libs/dawn/Release/include/dawn/: webgpu_cpp.h
libs/dawn/Release/include/dawn/wire/client/: webgpu_cpp.h
libs/dawn/Release/lib/: webgpu_dawn.lib
libs/dawn/Win/Release/lib/: webgpu_dawn.lib
libs/glfw/Win/Release/lib/: glfw3.lib
src/: 02-Triangle.cpp  CMakeLists.txt
src/01-hello-web-gpu/: CMakeLists.txt  HelloWebGpu.cpp
src/02-triangle/: CMakeLists.txt  Triangle.cpp
src/basic/: 01-HelloWebGpu.cpp  02-Triangle.cpp  03-TriangleMSAA.cpp  04-Uniform.cpp  04-Uniform.wgsl  05-Texture.cpp  05-Texture.wgsl  CMakeLists.txt
src/common/: Application.cpp  Application.h  MathHelp.cpp  MathHelp.h  Utils.cpp  Utils.h  Utils.mm
